
[package]
name = "fos_server"
version = "0.1.0"
edition = "2021"
authors = ["Tim-Jonas Wechler"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/timjonaswechler/fos_server"

[dependencies]
# general
bevy = { version = "0.17.2"  }

# networking
aeronet = { version = "0.17.2"}
aeronet_io = { version = "0.17.2"}
aeronet_channel = { version = "0.17.2" }
aeronet_replicon = { version = "0.17.2" }
aeronet_transport = { version = "0.17.2" }
aeronet_websocket = { version = "0.17.2" }
aeronet_webtransport = { version = "0.17.2",features = ["client","server", "dangerous-configuration"] }


# debug
bevy_egui = { version = "0.38.0" }
bevy-inspector-egui = "0.35"
anyhow = "1.0"
