
[package]
name = "fos_server"
version = "0.1.0"
edition = "2021"
authors = ["Tim-Jonas Wechler"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/timjonaswechler/fos_server"

[dependencies]
# general
bevy = { version = "0.17.2"  }

# networking
aeronet = { version = "0.18.0"}
aeronet_io = { version = "0.18.0"}
aeronet_channel = { version = "0.18.0" }
# aeronet_replicon = { version = "0.18.0", features = ["client", "server"] }
aeronet_webtransport = { version = "0.18.0", features = ["client","server", "dangerous-configuration"] }
# bevy_replicon = { version = "0.37.0" }

# debug
bevy_egui = { version = "0.38.0" }
bevy-inspector-egui = "0.35"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
