[package]
name = "fos_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# general
bevy = { workspace = true }
bevy_egui = { workspace = true }
rand = "0.8"

# networking
aeronet = { workspace = true }
aeronet_io = { workspace = true }
aeronet_channel = { workspace = true }
aeronet_replicon = { workspace = true }
aeronet_transport = { workspace = true }
aeronet_websocket = { workspace = true }
aeronet_webtransport = { workspace = true }
